# Math_Parser

./: CMakeLists.txt  grammar.txt  main.cpp  test
include/: variable_environment.hpp
include/lexer/: scanner.hpp  string_cursor.hpp  token.hpp
include/lexer/deterministic_finite_automatas/: dfa.hpp  dfa_grouping_operators.hpp  dfa_identifiers.hpp  dfa_integers.hpp  dfa_math_symbols.hpp  dfa_point_numbers.hpp
include/parser/: ast.hpp  parser.hpp
src/: variable_environment.cpp
src/lexer/: scanner.cpp  string_cursor.cpp  token.cpp
src/lexer/deterministic_finite_automatas/: dfa.cpp  dfa_grouping_operators.cpp  dfa_identifiers.cpp  dfa_integers.cpp  dfa_math_symbols.cpp  dfa_point_numbers.cpp
src/parser/: ast.cpp  parser.cpp
